--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/slider": "^3.0.3",
     "@terrylinla/react-native-sketch-canvas": "^0.8.0",
     "axios": "^0.21.1",
     "react": "17.0.1",
