--- a/model/Dockerfile
+++ b/model/Dockerfile
@@ -3,6 +3,10 @@ FROM python:3.8-slim-buster
 WORKDIR /app
 
 COPY requirements.txt requirements.txt
+
+# For opencv2
+RUN apt-get update && apt-get install -y python3-opencv
+
 RUN pip3 install -r requirements.txt
 
 COPY . .
