--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,10 @@
     "start": "react-native start"
   },
   "dependencies": {
-    "@react-native-community/slider": "3.0.3",
+    "@react-native-community/slider": "^3.0.3",
     "axios": "^0.21.1",
     "expo": "~42.0.1",
+    "expo-asset": "~8.3.3",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.1",
@@ -17,6 +18,8 @@
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-canvas": "https://github.com/iddan/react-native-canvas.git",
+    "react-native-color-palette": "^2.2.0",
+    "react-native-color-picker": "^0.6.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-screens": "~3.4.0",
