--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,17 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.0",
     "@react-native-community/slider": "^3.0.3",
     "axios": "^0.21.1",
     "expo": "~42.0.1",
     "expo-asset": "~8.3.3",
+    "expo-gl": "~10.4.2",
+    "expo-processing": "^2.0.2",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.1",
+    "processing-js": "^1.6.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
