--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-native-unimodules": "~0.14.5",
     "react-native-web": "~0.13.12",
     "react-native-webview": "11.6.2",
+    "react-native-wheel-color-picker": "^1.1.0",
     "tinycolor2": "^1.4.2"
   },
   "devDependencies": {
