--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-native-color-palette": "^2.2.0",
     "react-native-color-picker": "^0.6.0",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-reanimated": "~2.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-unimodules": "~0.14.5",
