--- a/client/package.json
+++ b/client/package.json
@@ -1,10 +1,15 @@
 {
+  "homepage": "http://justinleung.me/hai-art-deploy",
+
   "main": "index.js",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "web": "expo start --web",
-    "start": "react-native start"
+    "start": "react-native start",
+    "deploy": "gh-pages -d web-build",
+    "predeploy": "expo build:web"
+  
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
@@ -35,7 +40,8 @@
     "tinycolor2": "^1.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9.0",
+    "gh-pages": "^3.2.3"
   },
   "private": true
 }
