--- a/model/Dockerfile
+++ b/model/Dockerfile
@@ -11,4 +11,7 @@ RUN pip3 install -r requirements.txt
 
 COPY . .
 
+EXPOSE 8000
+
+
 CMD ["python3", "-m", "flask", "run", "--host=0.0.0.0", "-p 8000"]
