--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,4 @@
 {
-  "homepage": "http://justinleung.me/hai-art-deploy",
-
   "main": "index.js",
   "scripts": {
     "android": "react-native run-android",
@@ -9,10 +7,10 @@
     "start": "react-native start",
     "deploy": "gh-pages -d web-build",
     "predeploy": "expo build:web"
-  
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-community/art": "^1.2.0",
     "@react-native-community/slider": "^3.0.3",
     "axios": "^0.21.1",
     "expo": "~42.0.1",
@@ -30,6 +28,8 @@
     "react-native-color-palette": "^2.2.0",
     "react-native-color-picker": "^0.6.0",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-indicator": "^1.2.2",
+    "react-native-indicators": "^0.17.0",
     "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-reanimated": "~2.2.0",
     "react-native-screens": "~3.4.0",
