--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "expo-updates": "~0.8.1",
     "processing-js": "^1.6.6",
     "react": "16.13.1",
+    "react-base64-downloader": "^2.1.7",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-canvas": "https://github.com/iddan/react-native-canvas.git",
