Revamp UI, add transparency slider, multiple views

--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,9 @@
     "processing-js": "^1.6.6",
     "react": "16.13.1",
     "react-base64-downloader": "^2.1.7",
+    "react-color": "^2.19.3",
     "react-dom": "16.13.1",
+    "react-eyedrop": "^5.2.1",
     "react-native": "~0.63.4",
     "react-native-canvas": "https://github.com/iddan/react-native-canvas.git",
     "react-native-color-palette": "^2.2.0",
