--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react": "16.13.1",
     "react-base64-downloader": "^2.1.7",
     "react-color": "^2.19.3",
+    "react-colorful": "^5.5.1",
     "react-dom": "16.13.1",
     "react-eyedrop": "^5.2.1",
     "react-native": "~0.63.4",
