--- a/client/package.json
+++ b/client/package.json
@@ -21,11 +21,11 @@
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.1",
     "processing-js": "^1.6.6",
-    "react": "16.13.1",
+    "react": "^18.2.0",
     "react-base64-downloader": "^2.1.7",
     "react-color": "^2.19.3",
     "react-colorful": "^5.5.1",
-    "react-dom": "16.13.1",
+    "react-dom": "^18.2.0",
     "react-eyedrop": "^5.2.1",
     "react-native": "~0.63.4",
     "react-native-canvas": "https://github.com/iddan/react-native-canvas.git",
