--- a/client/package.json
+++ b/client/package.json
@@ -45,7 +45,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^5.0.0"
   },
-  "private": true
+  "private": true,
+  "homepage": "https://jackwensen.github.io/DeepThInkWeb/"
 }
