--- a/model/requirements.txt
+++ b/model/requirements.txt
@@ -15,7 +15,7 @@ pycocotools==2.0.6
 python-dotenv==0.21.0
 scipy==1.7.0
 six==1.16.0
-skimage==0.0
+# skimage==0.0
 tensorflow==2.11.0
 torch==1.9.0
 torchtext==0.14.1
