--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.watcherExclude": {
         "**/target": true
-    }
+    },
+    "python.analysis.extraPaths": [
+        "./model/all_models/gaugan/SPADE_pretrained/SPADE"
+    ]
 }
