--- a/model/requirements.txt
+++ b/model/requirements.txt
@@ -12,10 +12,11 @@ onnx_caffe2==1.0.0
 opencv_python==4.5.3.56
 Pillow==9.4.0
 pycocotools==2.0.6
-python-dotenv==0.21.0
+python-dotenv==0.21.1
+requests==2.28.1
 scipy==1.7.0
 six==1.16.0
-# skimage==0.0
+skimage==0.0
 tensorflow==2.11.0
 torch==1.9.0
 torchtext==0.14.1
