--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^12.0.0",
     "@react-native-community/art": "^1.2.0",
     "@react-native-community/slider": "^3.0.3",
+    "antd": "^5.4.1",
     "axios": "^0.21.1",
     "expo": "~42.0.1",
     "expo-asset": "~8.3.3",
