--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.21.1",
     "expo": "~42.0.1",
     "expo-asset": "~8.3.3",
+    "expo-build-properties": "^0.6.0",
     "expo-gl": "~10.4.2",
     "expo-processing": "^2.0.2",
     "expo-splash-screen": "~0.11.2",
@@ -32,6 +33,7 @@
     "react-native-canvas": "https://github.com/iddan/react-native-canvas.git",
     "react-native-color-palette": "^2.2.0",
     "react-native-color-picker": "^0.6.0",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-indicator": "^1.2.2",
     "react-native-indicators": "^0.17.0",
