--- a/model/requirements.txt
+++ b/model/requirements.txt
@@ -1,5 +1,5 @@
-accelerate=0.18.0
-diffusers==0.14.0
+accelerate==0.18.0
+diffusers==0.17.1
 dill==0.3.4
 dominate==2.7.0
 easydict==1.9
@@ -14,12 +14,12 @@ opencv_python==4.5.3.56
 Pillow==9.5.0
 pycocotools==2.0.6
 python-dotenv==1.0.0
-requests==2.28.1
+requests==2.31.0
 scipy==1.7.0
 six==1.16.0
-skimage==0.0
+scikit-image
 tensorflow==2.12.0
 torch==1.13.1
-torchtext==0.15.1
+# torchtext==0.15.1
 torchvision==0.14.1
 xformers==0.0.16
