--- a/model/requirements.txt
+++ b/model/requirements.txt
@@ -15,6 +15,7 @@ Pillow==9.5.0
 pycocotools==2.0.6
 python-dotenv==1.0.0
 requests==2.31.0
+replicate==0.12.0
 scipy==1.7.0
 six==1.16.0
 scikit-image
