--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,15 @@
     "@react-native-community/art": "^1.2.0",
     "@react-native-community/slider": "^3.0.3",
     "axios": "^0.21.1",
-    "expo": "~42.0.1",
+    "expo": "^52.0.41",
     "expo-asset": "~8.3.3",
+    "expo-cli": "^6.3.10",
     "expo-gl": "~10.4.2",
     "expo-processing": "^2.0.2",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.1",
+    "metro": "^0.82.0",
     "processing-js": "^1.6.6",
     "react": "16.13.1",
     "react-base64-downloader": "^2.1.7",
